[FIX] align discounted amount on receipt and wrong discount rounding on orderline after refresh the page (it-projects-llc/addons-dev#297)
* [IMP] show new orderline price in screen and receipt

* [FIX] show discount on orderline

* [FIX] discount rounding after refresh page

--- a/pos_pricelist/static/src/css/style.css
+++ b/pos_pricelist/static/src/css/style.css
@@ -147,4 +147,10 @@
 .pos .pos-right-align {
     text-align: right;
     vertical-align: top;
+    position: relative;
+}
+.pos .pos-new-price {
+    position: absolute;
+    right: 0;
+    bottom: 0;
 }
